--- a/client/src/router/layouts/ProtectedRoute/index.module.scss
+++ b/client/src/router/layouts/ProtectedRoute/index.module.scss
@@ -18,5 +18,6 @@
 
   @include deskmin {
     margin: 0;
+    width: 100%;
   }
 }
